# python_projects

./: README.md  my_first_program.py
Homework/homework7/: 10problem.py  2problem.py  3problem.py  4problem.py  5problem.py  6problem.py  7problem.py  9problem.py  problem1.py
Homework/homework_10/: 1problem.py  2problem.py  2problempartB.py  3problem.py  4problem.py  5problem.py  6problem.py  7problem.py
Homework/homework_11/: 1problem.py  2problem.py  3problem.py  4problem.py
Homework/homework_2/: problem_1.py  problem_2.py  problem_3.py  problem_4.py
Homework/homework_3/: problem_3.py  problem_3_janani.py  problem_4.py  problem_5.py
Homework/homework_5_p2/: proble_9.py  problem_1.py  problem_2.py  problem_3.py  problem_4.py  problem_5.py  problem_7.py
Homework/homework_6/: problem1.py  problem2.py  problem3.py  problem5.py  problem6.py
Homework/homework_8/: 1problem.py  2problem.py  3problem.py  5problem.py  6problem.py  8problem.py
Homework/homework_9/: 2problem.py  temp.py
lecture_10/: example1.py
lecture_2/: calc.py  ex1.py  ex2.py  test_sep.py
lecture_4/: ex_11.py  ex_2.py  ex_4.py  ex_6.py  ex_8.py
lecture_5/: ex_1.py
lecture_6/: ex1.py  ex2.py  ex4.py
lecture_6_continued/: ex_1.py  ex_2.py
lecture_7/: ex_1.py
python_course/Homework/homework7/: 8problem.py
python_course/TicTacToe/: backend.py  pyproject.toml
python_course/TicTacToe/backend/: api.py  backend.py
python_course/lecture_4/: ex_10.py  ex_5.py  ex_7.py  ex_9.py
python_course/lecture_5/: ex_2.py
python_course/lecture_6/: ex3.py
(+12 files in other folders)
